Fix 500 error on /track route: Add error handling and user feedback